fix layout bug

--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -1,11 +1,11 @@
 @import "../../scss/variables";
 
 .title {
-  width: 869px;
+  max-width: 869px;
   margin: 0 auto;
   font-style: normal;
   font-weight: 700;
-  font-size: 101px;
+  font-size: 91px;
   line-height: 98%;
   text-align: center;
   color: #000000;
